--- a/mudi/src/main/resources/templates/home.html
+++ b/mudi/src/main/resources/templates/home.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-</head>
+<head th:replace="~{base::head('Home')}"></head>
 
 <body>
+    <div th:replace="~{base::Logo}"></div>
     <div class="container">
-        <div class="jumbotron mb-0">
-            <h1 class="display-4">Meus Pedidos</h1>
-        </div>
+        <div th:replace="~{base::titulo('Meus Pedidos')}"></div>
 
         <nav class="navbar navbar-expand navbar-light bg-light d-flex justify-content-between mb-3">
             <div class="navbar-nav">
@@ -25,7 +17,7 @@
             </div>
             <a href="/pedido/formulario"><button class="btn btn-outline-secondary my-2 my-sm-0">Novo</button></a>
         </nav>
-        <div th:each="pedido:${pedidos}" class="card">
+        <div th:each="pedido:${pedidos}" class="card mb-3">
             <div th:text="${pedido.nomeProduto}" class="card-header">Nome do Produto</div>
 
             <div class="card-body">
@@ -36,7 +28,8 @@
                                 <div>Valor: <span th:text="${pedido.valorNegociado}">200,99</span></div>
                             </div>
                             <div class="col-mb-7">
-                                <div>Data da Entrega: <span th:text="${pedido.dataDaEntrega}">10/02/2020</span></div>
+                                <div>Data da Entrega: <span th:text="${pedido.dataDaEntrega}">10/02/2020</span>
+                                </div>
                             </div>
 
                         </div>
