--- a/mudi/src/main/resources/templates/pedido/formulario.html
+++ b/mudi/src/main/resources/templates/pedido/formulario.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Novo Pedido</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-</head>
+<head th:replace="~{base::head('Novo Pedido')}"></head>
 
 <body>
+    <div th:replace="~{base::Logo}"></div>
     <div class="container">
-        <div class="jumbotron mb-0">
-            <h1 class="display-4">Novo Pedido</h1>
-        </div>
+        <div th:replace="~{base::titulo('Novo Pedido')}"></div>
+
         <div class="card">
             <form th:object="${requisicaoNovoPedido}" class="card-body" action="/pedido/novo" method="POST">
                 <div class="form-group">
