--- a/mudi/src/main/resources/templates/home.html
+++ b/mudi/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head th:replace="~{base::head('Home')}"></head>
 
