--- a/mudi/src/main/resources/templates/login.html
+++ b/mudi/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
         <div th:replace="~{base::titulo('Login')}"></div>
 
         <div class="card mb-3">
-            <form method="post" th:action="@{/Login}" class="card-body">
+            <form method="post" th:action="@{/login}" class="card-body">
                 <div class="form-group">
                     <label for="username">Usuario</label>
                     <input name="username" placeholder="Usuário" class="form-control" />
