--- a/mudi/src/main/resources/templates/base.html
+++ b/mudi/src/main/resources/templates/base.html
@@ -19,16 +19,28 @@
     </style>
 </head>
 
-<div th:fragment="Logo" class="logo-container mb-3 p-3 d-flex justify-content-between">
-    <span class="logo">mudi</span>
-    <span class="mt-3">
-        <a sec:authorize="!isAuthenticated()" class="text-light" href="/login">login</a>
-        <a onclick="document.querySelector('#form-login').submit()" sec:authorize="isAuthenticated()" class="text-light"
-            href="#">logout</a>
-        <form id="form-login" th:action="@{/logout}" method="post"></form>
-    </span>
+<div th:fragment="Logo" class="">
+    <div class="row logo-container mb-3 p-3">
+        <div class="col d-flex justify-content-between">
+            <span class="logo ml-2">mudi</span>
+            <span class="mt-3">
+                <a sec:authorize="!isAuthenticated()" class="text-light" href="/login">login</a>
+                <a onclick="document.querySelector('#form-login').submit()" sec:authorize="isAuthenticated()"
+                    class="text-light" href="#">logout</a>
+                <form id="form-login" th:action="@{/logout}" method="post"></form>
+            </span>
+        </div>
+    </div>
+    <div class="row" sec:authorize="isAuthenticated()">
+        <div class="col">
+            <nav class="nav">
+                <a class="nav-link" th:href="@{/home}">Home</a>
+                <a class="nav-link" th:href="@{/usuario/pedido}">Meus Pedidos</a>
+            </nav>
+        </div>
+    </div>
 </div>
 
-<div th:fragment="titulo(valor)" class="jumbotron mb-0">
+<div th:fragment="titulo(valor)" class="jumbotron mb-3 mt-2">
     <h1 class="display-4" th:text="${valor}"></h1>
 </div>
