--- a/mudi/src/main/resources/templates/oferta/home.html
+++ b/mudi/src/main/resources/templates/oferta/home.html
@@ -1,58 +1,68 @@
 <!DOCTYPE html>
 <html lang="pt-BR" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
-<head th:replace="~{base::head('Home')}"></head>
+<head th:replace="~{base::head('Ofertas')}"></head>
 
-<body>
+<body onLoad="onLoad()">
     <div th:replace="~{base::Logo}"></div>
-    <div class="container">
-        <div th:replace="~{base::titulo('Home')}"></div>
+    <div class="container" id="ofertas">
+        <div th:replace="~{base::titulo('Faça sua oferta')}"></div>
 
-        <div th:each="pedido:${pedidos}" class="card mb-3">
+        <div v-for="pedido in pedidos" class="card mb-3">
 
-            <div th:text="${pedido.nomeProduto}" class="card-header alert alert-dark">Nome do
-                Produto</div>
+            <div class="card-header alert alert-dark">
+                {{pedido.nomeProduto}}
+            </div>
 
             <div class="card-body">
                 <div class="row">
                     <div class="col-12 col-sm-8 mb-3">
                         <div class="row">
                             <div class="col-mb-5">
-                                <div>Valor: <span th:if="${pedido.valorNegociado} != null"
-                                        th:text="${'R$ '+#numbers.formatDecimal(pedido.valorNegociado,3,'POINT',2,'COMMA')}">valor</span>
-                                </div>
+                                <div>Valor: <input /></div>
                             </div>
                             <div class="col-mb-7">
-                                <div>Data da Entrega: <span
-                                        th:text="${#temporals.format(pedido.dataDaEntrega,'dd/MM/yyy')}">data</span>
-                                </div>
+                                <div>Data da Entrega: <input /></div>
                             </div>
 
                         </div>
                         <div>Produto</div>
-                        <div> <input th:value="${pedido.urlProduto}" class="form-control" type="Url do Produto" />
-                        </div>
+                        <div> <a v-bind:href="pedido.urlProduto">{{pedido.urlProduto}}</a></div>
 
                         <div>Descrição</div>
                         <div>
-                            <textarea th:text="${pedido.descricao}" class="form-control" name="descricao_produto"
-                                id="descProd" cols="30" rows="10">
-                                descrição do pedido
-                            </textarea>
+                            <textarea class="form-control">{{pedido.descricao}}</textarea>
                         </div>
                     </div>
                     <div class="col-12 col-sm-4">
                         <div>
-                            <img th:src="${pedido.urlImagem}" class="img-thumbnail" src="" alt="imagem do produto" />
+                            <img v-bind:src="pedido.urlImagem" class="img-thumbnail" alt="imagem do produto" />
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <script>
+        function onLoad() {
+            var app = new Vue({
+                el: '#ofertas',
+                data: {
+                    pedidos: []
+                },
+                mounted() {
+                    axios
+                        .get("http://localhost:8080/api/pedidos/aguardando")
+                        .then(response => (this.pedidos = response.data))
+                }
+            });
+        }
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
 
 </html>
