--- a/mudi/src/main/resources/templates/oferta/home.html
+++ b/mudi/src/main/resources/templates/oferta/home.html
@@ -10,29 +10,49 @@
 
         <div v-for="pedido in pedidos" class="card mb-3">
 
-            <div class="card-header alert alert-dark">
+            <div class="card-header alert alert-warning">
                 {{pedido.nomeProduto}}
             </div>
 
             <div class="card-body">
                 <div class="row">
                     <div class="col-12 col-sm-8 mb-3">
-                        <div class="row">
-                            <div class="col-mb-5">
-                                <div>Valor: <input /></div>
-                            </div>
-                            <div class="col-mb-7">
-                                <div>Data da Entrega: <input /></div>
-                            </div>
-
-                        </div>
                         <div>Produto</div>
                         <div> <a v-bind:href="pedido.urlProduto">{{pedido.urlProduto}}</a></div>
 
                         <div>Descrição</div>
                         <div>
-                            <textarea class="form-control">{{pedido.descricao}}</textarea>
+                            <p>{{pedido.descricao}}</p>
                         </div>
+                        <div class="row mt-2">
+                            <div class="col-5 col-mb-5">
+                                <div>Valor:
+                                    <input v-bind:class="{'is-invalid':pedido.errors.valor !== ''}" class="form-control"
+                                        v-model="pedido.valorNegociado" />
+                                    <div v-if="pedido.errors.valor" class="invalid-feedback">
+                                        {{pedido.errors.valor}}
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-7 col-mb-7">
+                                <div>Data da Entrega:
+                                    <input v-bind:class="{'is-invalid':pedido.errors.dataDaEntrega !== ''}"
+                                        class="form-control" v-model="pedido.dataDaEntrega" />
+                                    <div v-if="pedido.errors.dataDaEntrega" class="invalid-feedback">
+                                        {{pedido.errors.dataDaEntrega}}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mt-2">
+                            <label for="comentatio">Comentário</label>
+                            <textarea name="comentario" id="" class="form-control"
+                                v-model="pedido.comentario"></textarea>
+                        </div>
+                        <button v-if="pedido.ofertaEnviada" v-on:click="enviarOferta(pedido)"
+                            class="btn btn-success mt-2">Oferta Enviada</button>
+                        <button v-else v-on:click="enviarOferta(pedido)" class="btn btn-primary mt-2">Enviar
+                            oferta</button>
                     </div>
                     <div class="col-12 col-sm-4">
                         <div>
@@ -53,7 +73,37 @@
                 mounted() {
                     axios
                         .get("http://localhost:8080/api/pedidos/aguardando")
-                        .then(response => (this.pedidos = response.data))
+                        .then(response => {
+                            response.data.forEach(pedido => {
+                                pedido.ofertaEnviada = false;
+                                pedido.errors = {
+                                    valor: '',
+                                    dataDaEntrega: ''
+                                }
+                            });
+                            this.pedidos = response.data;
+                        })
+                },
+                methods: {
+                    enviarOferta: function (pedido) {
+                        pedido.errors = {
+                            valor: '',
+                            dataDaEntrega: ''
+                        };
+                        axios
+                            .post("http://localhost:8080/api/ofertas", {
+                                id: pedido.id,
+                                valor: pedido.valorNegociado,
+                                dataDaEntrega: pedido.dataDaEntrega,
+                                comentario: pedido.comentario
+                            })
+                            .then(response => pedido.ofertaEnviada = true)
+                            .catch(error => {
+                                error.response.data.errors.forEach(error => {
+                                    pedido.errors[error.field] = error.defaultMessage;
+                                });
+                            });
+                    }
                 }
             });
         }
